# mycmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Gun.h  Solider.h
src/: Gun.cpp  Solider.cpp  abstractFactory.cpp  factoryMode.cpp  simpleFactory.cpp
